base/src/test/resources/failure/tyck/stringlit-1.aya.txt
In file $FILE:1:9 ->

  1 |   def a => "123"
    |            ^---^

Error: No rule inferring the type of "123"

1 error(s), 0 warning(s).
What are you doing?
